--- a/final/package.json
+++ b/final/package.json
@@ -17,9 +17,11 @@
     "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
     "hbs": "^4.0.1",
+    "igdb-api-node": "^3.1.7",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
+    "multer": "^1.4.1",
     "validator": "^10.9.0"
   }
 }
